--- a/index.html
+++ b/index.html
@@ -1,18 +1,51 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
-</head>
-<body>
-    
+  </head>
+  <body>
+    <h2>Calcola il prezzo del tuo biglietto</h2>
+    <div class="container bg-light rounded-2 py-5 text-center">
+        <div class="row">
+            <div class="col">
+                <div class="title">Nome Cognome</div>
+                <input type="text" id="nome" class="input">
+            </div>
+            <div class="col">
+                <div class="title">Km da percorrere</div>
+                <input type="text" id="km" class="input ">
+            </div>
+            <div class="col">
+                <div class="title">Fascia d'età</div>
+                <input type="" id="eta" class="input ">
+            </div>
+            <div class="buttons pt-5">
+                <button class="bottone1">Genera</button>
+                <button class="bottone2">Annulla</button>
+            </div>
+        </div>
+    </div>
+    <h2>Il tuo biglietto</h2>
+    <div class="container bg-light my-5 p-4" >
+        <h3 class="pt-3">dettaglio passeggeri</h3>
+        <div class="row border-top border-bottom ">
+            <div class="col-3 p-4 bg_secondary">
+                <h4>Nome</h4>
+                <h4>passeggero</h4>
+                <h4></h4>
+            </div>
+            <div class="col-9"></div>
+        </div>
+    </div>
+
 
 
 
 
     <script src="./assets/js/main.js"></script>
-</body>
+  </body>
 </html>
