--- a/index.html
+++ b/index.html
@@ -36,9 +36,26 @@
             <div class="col-3 p-4 bg_secondary">
                 <h4>Nome</h4>
                 <h4>passeggero</h4>
-                <h4></h4>
+                <h4 id="name"></h4>
             </div>
-            <div class="col-9"></div>
+            <div class="col-9 d-flex">
+                <div class="col pt-5">
+                    <h4>Offerta</h4>
+                    <p id="sconto"></p>
+                </div>
+                <div class="col pt-5">
+                    <h4>Carrozza</h4>
+                    <p>7</p>
+                </div>
+                <div class="col pt-5">
+                    <h4>Codice CP</h4>
+                    <p>97928</p>
+                </div>
+                <div class="col pt-5">
+                    <h4>Costo Biglietto</h4>
+                    <p id="prezzo"></p>
+                </div>
+            </div>
         </div>
     </div>
 
