--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
     </div>
     <h2>Il tuo biglietto</h2>
     <div class="container bg-light my-5 p-4" >
-        <h3 class="pt-3">dettaglio passeggeri</h3>
+        <h3 class="pt-3 text-uppercase">dettaglio passeggeri</h3>
         <div class="row border-top border-bottom ">
             <div class="col-3 p-4 bg_secondary">
-                <h4>Nome</h4>
-                <h4>passeggero</h4>
+                <h4 class="text-uppercase">Nome</h4>
+                <h4 class="text-uppercase">passeggero</h4>
                 <h4 id="name"></h4>
             </div>
             <div class="col-9 d-flex">
