--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
   </head>
   <body>
-    <h2>Calcola il prezzo del tuo biglietto</h2>
+    <h2 class="py-3">Calcola il prezzo del tuo biglietto</h2>
     <div class="container bg-light rounded-2 py-5 text-center">
         <div class="row">
             <div class="col">
@@ -29,8 +29,8 @@
             </div>
         </div>
     </div>
-    <h2>Il tuo biglietto</h2>
-    <div class="container bg-light my-5 p-4" >
+    <h2 class="pt-4">Il tuo biglietto</h2>
+    <div class="container bg-light p-4" >
         <h3 class="pt-3 text-uppercase">dettaglio passeggeri</h3>
         <div class="row border-top border-bottom ">
             <div class="col-3 p-4 bg_secondary">
