--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h2 class="py-3">Calcola il prezzo del tuo biglietto</h2>
-    <div class="container bg-light rounded-2 py-5 text-center">
+    <div class="container bg-light rounded-4 py-5 text-center shadow ">
         <div class="row">
             <div class="col">
                 <div class="title">Nome Cognome</div>
