--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
         </div>
     </div>
     <h2 class="pt-4">Il tuo biglietto</h2>
-    <div class="container bg-light p-4" >
+    <div class="container bg-light p-4 mb-5" >
         <h3 class="pt-3 text-uppercase">dettaglio passeggeri</h3>
         <div class="row border-top border-bottom ">
             <div class="col-3 p-4 bg_secondary">
                 <h4 class="text-uppercase">Nome</h4>
                 <h4 class="text-uppercase">passeggero</h4>
-                <h4 id="name"></h4>
+                <h4 id="name" class="pt-4"></h4>
             </div>
             <div class="col-9 d-flex">
                 <div class="col pt-5">
@@ -58,7 +58,6 @@
             </div>
         </div>
     </div>
-
 
 
 
